--- a/css/menu.css
+++ b/css/menu.css
@@ -208,14 +208,14 @@ a.toggle:hover .bar {
 .contain.active section:nth-child(4):hover {
   top: -1vh;
 }
-.triangle_right {
+#triangle_right {
     width: 0;
     height: 0;
     border-top: 70px solid transparent;
     border-left: 140px solid #ff5a00;
     border-bottom: 70px solid transparent;
 }
-.triangle_left {
+#triangle_left {
     width: 0;
     height: 0;
     border-top: 70px solid transparent;
