--- a/css/menu.css
+++ b/css/menu.css
@@ -208,7 +208,7 @@ a.toggle:hover .bar {
 .contain.active section:nth-child(4):hover {
   top: -1vh;
 }
-.triangle_right {
+#triangle_right {
     width: 120;
     height: 120;
     border-top: 70px solid transparent;
