--- a/css/menu.css
+++ b/css/menu.css
@@ -16,6 +16,10 @@ body {
     border-top: 70px solid transparent;
     border-left: 140px solid #ff5a00;
     border-bottom: 70px solid transparent;
+    font-size:50px;
+color:#fff;
+line-height:500px;
+text-align:center;
 }
 
 
