--- a/css/menu.css
+++ b/css/menu.css
@@ -17,11 +17,16 @@ body {
     border-left: 140px solid #ff5a00;
     border-bottom: 70px solid transparent;
     font-size:50px;
+    -webkit-animation: rightThenLeft 1s linear;
+    margin-right: 50000px;
+}
+
+.thattexttho {
+    background: white;
+    white-space: nowrap;
     -webkit-animation: rightThenLeft 2s linear;
     margin-right: 10000px;
 }
-
-
 	
 	
 }
