--- a/css/menu.css
+++ b/css/menu.css
@@ -5,9 +5,9 @@
 }
 
 @-webkit-keyframes flip {
-    0% {-webkit-transform: rotateY(0deg);}
-	50% {-webkit-transform: rotateY(180deg);}
-    100% {-webkit-transform: rotateY(360deg);}
+    0% {-webkit-transform: rotateX(0deg);}
+	50% {-webkit-transform: rotateX(180deg);}
+    100% {-webkit-transform: rotateX(360deg);}
 }
 
 
