--- a/css/menu.css
+++ b/css/menu.css
@@ -32,7 +32,7 @@ body {
     font-size:50px;
 }
 
-.thattexttho {
+.tlt {
 padding-left: 1.5%;
     white-space: nowrap;
 	-webkit-animation: rightThenLeft 0.5s ease-in-out;
