Made the top bar smaller

--- a/css/menu.css
+++ b/css/menu.css
@@ -24,17 +24,21 @@ body {
           
 }
 .triangle_right {
+	display: inline;
     width: 500;
     height: 500;
     border-top: 70px solid transparent;
     border-left: 140px solid #ff5a00;
-    border-bottom: 70px solid transparent;
+    border-bottom: 35px solid transparent;
     font-size:50px;
     -webkit-animation: rightThenLeft 0.5s ease-in-out;
     -webkit-animation-delay: 1s
+	position: absolute;
+	z-index: 2;
 }
 
 .tlt {
+display: inline;
 padding-left: 1.5%;
     white-space: nowrap;
 	-webkit-animation: rightThenLeft 0.5s ease-in-out;
