--- a/css/menu.css
+++ b/css/menu.css
@@ -127,13 +127,10 @@ div.wrapper {
   width: 100%;
 }
 
-.santahat {
-	background:none;
-	pointer-events:none;
-	background-image: url(http://media.vector4free.com/mini/pixel77-free-vector-santa-0967-270x200.jpg);
-	position: fixed;
-	top: 30px;
-	left: 25px;
+a.santa{
+	content: url(http://media.vector4free.com/mini/pixel77-free-vector-santa-0967-270x200.jpg);
+	
+}
 }
 a.toggle {
   display: block;
