--- a/css/menu.css
+++ b/css/menu.css
@@ -127,7 +127,7 @@ div.wrapper {
   width: 100%;
 }
 
-a.santa{
+div.santa{
 	content: url(http://media.vector4free.com/mini/pixel77-free-vector-santa-0967-270x200.jpg);
 	
 }
