--- a/css/menu.css
+++ b/css/menu.css
@@ -77,7 +77,25 @@ body {
 	padding-left: 1.5%;
     white-space: nowrap;
 	-webkit-animation: rightThenLeft 0.5s ease-in-out;
-	-webkit-animation-delay: 2s
+	-webkit-animation-delay: 2s;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 10px;
+  border: none;
+  font: normal; 
+  color: rgba(255,255,255,1);
+  text-decoration: normal;
+  text-align: center;
+  -o-text-overflow: clip;
+  text-overflow: clip;
+  white-space: pre;
+  text-shadow: 0 0 10px rgba(255,255,255,1) , 0 0 20px rgba(255,255,255,1) , 0 0 30px rgba(255,255,255,1) , 0 0 40px #39FF14 , 0 0 70px #39FF14 , 0 0 80px #39FF14 , 0 0 100px #39FF14 ;
+  -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+}
 }
 	
 	
