--- a/css/menu.css
+++ b/css/menu.css
@@ -19,7 +19,6 @@ body {
   overflow: hidden;
   -webkit-transform-style: preserve-3d;
           transform-style: preserve-3d;
-          
 }
 
 /* Snow */
@@ -196,6 +195,7 @@ a.toggle:hover .bar {
 }
 .contain section.home {
   background: #3399FF !important;
+  height: 100%;
 }
 .contain section.latest {
   background: #feb914 ! important;
