--- a/css/menu.css
+++ b/css/menu.css
@@ -86,7 +86,7 @@ body {
   box-sizing: border-box;
   padding: 10px;
   border: none;
-  font: normal; 
+  font: normal;
   color: #424242;
   text-decoration: normal;
   text-align: center;
@@ -137,6 +137,7 @@ div.card {
   width: 500px;
   display: inline-block;
   margin:25px;
+  box-shadow: 10px 10px 5px rgba(50,70,110,1);
 }
 
 div.wrapper {
@@ -315,45 +316,45 @@ a.toggle:hover .bar {
 /* End of selection */
 
 /* Fading effect */
-transitions: 
- 
+transitions:
+
 @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 
 
 .fade-in {
-    opacity:0;  
+    opacity:0;
 	-webkit-animation:fadeIn ease-in 1;
 	-moz-animation:fadeIn ease-in 1;
 	animation:fadeIn ease-in 1;
- 
+
 	-webkit-animation-fill-mode:forwards;
 	-moz-animation-fill-mode:forwards;
 	animation-fill-mode:forwards;
- 
+
 	-webkit-animation-duration:1s;
 	-moz-animation-duration:1s;
 	animation-duration:1s;
     }
-	
+
 .fade-in.one {
 -webkit-animation-delay: 0.7s;
 -moz-animation-delay: 0.7s;
 animation-delay: 0.7s;
 }
- 
+
 .fade-in.two {
 -webkit-animation-delay: 1.2s;
 -moz-animation-delay:1.2s;
 animation-delay: 1.2s;
 }
- 
+
 .fade-in.three {
 -webkit-animation-delay: 1.6s;
 -moz-animation-delay: 1.6s;
 animation-delay: 1.6s;
-}	
+}
 
 .fade-in.four {
 -webkit-animation-delay: 2.1s;
