--- a/css/menu.css
+++ b/css/menu.css
@@ -64,8 +64,8 @@ body {
 .triangle {
 	display: inline;
 	z-index: 2;
-  width: 500px;
-  height: 500px;
+  width: 500;
+  height: 500;
   border-top: 70px solid transparent;
   border-left: 140px solid #ff5a00;
   border-bottom: 35px solid transparent;
