--- a/css/menu.css
+++ b/css/menu.css
@@ -167,6 +167,7 @@ a.toggle:hover .bar {
 
 /* Menu selection */
 .contain {
+	margin-top: 10px;
   width: 100%;
   height: 100vh;
   -webkit-transition: all 500ms;
@@ -360,5 +361,6 @@ animation-delay: 2.1s;
 -webkit-animation-delay: 0.2s;
 -moz-animation-delay: 0.2s;
 animation-delay: 0.2s;
+overflow-y:scroll;
 }
 /* End of fading */
