Trying to fix mobile scrolling

--- a/css/jquery.fullPage.css
+++ b/css/jquery.fullPage.css
@@ -1,10 +1,3 @@
-/*!
- * fullPage 2.7.5
- * https://github.com/alvarotrigo/fullPage.js
- * MIT licensed
- *
- * Copyright (C) 2013 alvarotrigo.com - A project by Alvaro Trigo
- */
 html.fp-enabled,
 .fp-enabled body {
     margin: 0;
@@ -187,7 +180,7 @@ html.fp-enabled,
     font-family: arial, helvetica, sans-serif;
     white-space: nowrap;
     max-width: 220px;
-    overflow: hidden;
+    overflow: scroll;
     display: block;
     opacity: 0;
     width: 0;
